// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Portal #children 1`] = `
<Portal
  closeOnClick={false}
  closeOnResize={false}
  closeOnType={false}
  node={
    <body>
      <div>
        Test!
      </div>
    </body>
  }
  onClose={[Function]}
>
  <Portal
    containerInfo={
      <div>
        Test!
      </div>
    }
  >
    Test!
  </Portal>
</Portal>
`;

exports[`Portal component lifecycle 1`] = `"<div>Test!</div>"`;

exports[`Portal empty 1`] = `
<Portal
  closeOnClick={false}
  closeOnResize={false}
  closeOnType={false}
  node={
    <body>
      <div />
    </body>
  }
  onClose={[Function]}
>
  <Portal
    containerInfo={<div />}
  />
</Portal>
`;
